--- a/stakit/templates/deployment-backend.yaml
+++ b/stakit/templates/deployment-backend.yaml
@@ -66,7 +66,10 @@ spec:
               path: /actuator/health
               port: actuator
           resources:
-            {{- toYaml .Values.backend.resources | nindent 12 }}        
+            {{- toYaml .Values.backend.resources | nindent 12 }}
+          volumeMounts:
+            - mountPath: /tmp
+              name: tmp
       {{- with .Values.backend.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
@@ -79,3 +82,6 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      volumes:
+        - emptyDir: {}
+          name: tmp
