--- a/stakit/values.yaml
+++ b/stakit/values.yaml
@@ -53,7 +53,9 @@ backend:
 
   podAnnotations: {}
 
-  podSecurityContext:
+  podSecurityContext: {}
+
+  securityContext:
     capabilities:
       drop:
         - ALL
@@ -64,8 +66,6 @@ backend:
     runAsGroup: 11000
     seccompProfile:
       type: RuntimeDefault
-
-  securityContext: {}
 
   service:
     type: ClusterIP
@@ -123,19 +123,23 @@ frontend:
 
   podAnnotations: {}
 
-  podSecurityContext:
+  podSecurityContext: {}
+
+  securityContext:
     capabilities:
       drop:
         - ALL
-    readOnlyRootFilesystem: true
+      add:
+        - CAP_CHOWN
+        - CAP_SETGID
+        - CAP_SETUID
+#    readOnlyRootFilesystem: true
     allowPrivilegeEscalation: false
-    runAsNonRoot: true
-    runAsUser: 11000
-    runAsGroup: 11000
+#    runAsNonRoot: true
+#    runAsUser: 11000
+#    runAsGroup: 11000
     seccompProfile:
       type: RuntimeDefault
-
-  securityContext: {}
 
   service:
     type: ClusterIP
