--- a/stakit/values.yaml
+++ b/stakit/values.yaml
@@ -16,13 +16,13 @@ serviceAccount:
   name: ""
 
 backend: 
-  replicaCount: 1
+  replicaCount: 2
 
   image:
     repository: kvalitetsit/stakit-backend
     pullPolicy: IfNotPresent
     # -- Overrides the image tag whose default is the chart appVersion.
-    tag: "0.0.3"
+    tag: "0.0.5"
   deployment:
     env: 
       JDBC_URL:
@@ -115,7 +115,7 @@ backend:
   affinity: {}
 
 frontend:
-  replicaCount: 1
+  replicaCount: 2
 
   image:
     repository: kvalitetsit/stakit-frontend
@@ -139,7 +139,7 @@ frontend:
         value: '30'
       REACT_APP_API_BASEURL:
         # -- API base url
-        value: 'api/v1/'      
+        value: '/api/v1/'      
 
   podAnnotations: {}
 
