--- a/stakit/values.yaml
+++ b/stakit/values.yaml
@@ -4,7 +4,8 @@
 
 imagePullSecrets: []
 nameOverride: ""
-fullnameOverride: ""
+fullnameOverride: stakit
+namespace: kit-intern
 
 serviceAccount:
   # Specifies whether a service account should be created
@@ -19,7 +20,7 @@ backend:
   replicaCount: 2
 
   image:
-    repository: kvalitetsit/stakit-backend
+    repository: kvalitetsit/stakit-backend:0.2.0
     pullPolicy: IfNotPresent
     # -- Overrides the image tag whose default is the chart appVersion.
     tag: "0.2.0"
@@ -118,94 +119,21 @@ backend:
 
   affinity: {}
 
-frontend:
-  replicaCount: 2
-
-  image:
-    repository: kvalitetsit/stakit-frontend
-    pullPolicy: IfNotPresent
-    # -- Overrides the image tag whose default is the chart appVersion.
-    tag: "0.1.0"
-
-  deployment:
-    env: 
-      REACT_APP_KEYCLOAK_URL:
-        # -- Keycloak endpoint. 
-        value: 
-      REACT_APP_KEYCLOAK_REALM:
-        # -- Keycloak realm. 
-        value: 
-      REACT_APP_KEYCLOAK_CLIENTID:
-        # -- Keycloak client id. 
-        value: 
-      REACT_APP_INACTIVITY_MAX_MINUTES:
-        # -- Max inactivity
-        value: '30'
-      REACT_APP_API_BASEURL:
-        # -- API base url
-        value: '/api/v1/'      
-
-  podAnnotations: {}
-
-  podSecurityContext: {}
-
-  securityContext:
-    capabilities:
-      drop:
-        - ALL
-      add:
-        - CAP_CHOWN
-        - CAP_SETGID
-        - CAP_SETUID
-#    readOnlyRootFilesystem: true
-    allowPrivilegeEscalation: false
-#    runAsNonRoot: true
-#    runAsUser: 11000
-#    runAsGroup: 11000
-    seccompProfile:
-      type: RuntimeDefault
-
-  service:
-    type: ClusterIP
-    port: 80
-
-  ingress:
-    enabled: false
-    className: ""
-    annotations: {}
-      # kubernetes.io/ingress.class: nginx
-      # kubernetes.io/tls-acme: "true"
-    hosts:
-      - host: chart-example.local
-        paths:
-          - path: /
-            pathType: ImplementationSpecific
-    tls: []
-    #  - secretName: chart-example-tls
-    #    hosts:
-    #      - chart-example.local
-
-  resources: {}
-    # We usually recommend not to specify default resources and to leave this as a conscious
-    # choice for the user. This also increases chances charts run on environments with little
-    # resources, such as Minikube. If you do want to specify resources, uncomment the following
-    # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-    # limits:
-    #   cpu: 100m
-    #   memory: 128Mi
-    # requests:
-    #   cpu: 100m
-    #   memory: 128Mi
-
-  autoscaling:
-    enabled: false
-    minReplicas: 1
-    maxReplicas: 100
-    targetCPUUtilizationPercentage: 80
-    # targetMemoryUtilizationPercentage: 80
-
-  nodeSelector: {}
-
-  tolerations: []
-
-  affinity: {}
+kittyact:
+  namespace : kit-intern
+  name : stakit-frontend
+  image : kvalitetsit/stakit-frontend:0.1.0
+  frontendUrl : stakit.t0.hosting.kitkube.dk
+  replicas: 2
+  env:
+    REACT_APP_API_BASEURL:
+      value: /api/v1/
+    REACT_APP_INACTIVITY_MAX_MINUTES:
+      value: '30'
+    REACT_APP_KEYCLOAK_CLIENTID:
+      value: stakit-ui
+    REACT_APP_KEYCLOAK_REALM:
+      value: stakit
+    REACT_APP_KEYCLOAK_URL:
+      value: 'https://keycloak.t0.hosting.kitkube.dk/auth'
+    
