--- a/stakit/values-example.yaml
+++ b/stakit/values-example.yaml
@@ -5,7 +5,7 @@
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: stakit
-namespace: default
+namespace: kit-intern
 
 serviceAccount:
   # Specifies whether a service account should be created
@@ -120,25 +120,20 @@ backend:
   affinity: {}
 
 kittyact:
-  namespace : default
+  namespace : kit-intern
   name : stakit-frontend
   image : kvalitetsit/stakit-frontend:0.1.0
-  frontendUrl : chart-example.local
+  frontendUrl : stakit.t0.hosting.kitkube.dk
   replicas: 2
-  env: 
-      REACT_APP_KEYCLOAK_URL:
-        # -- Keycloak endpoint. 
-        value: 
-      REACT_APP_KEYCLOAK_REALM:
-        # -- Keycloak realm. 
-        value: 
-      REACT_APP_KEYCLOAK_CLIENTID:
-        # -- Keycloak client id. 
-        value: 
-      REACT_APP_INACTIVITY_MAX_MINUTES:
-        # -- Max inactivity
-        value: '30'
-      REACT_APP_API_BASEURL:
-        # -- API base url
-        value: '/api/v1/' 
+  env:
+    REACT_APP_API_BASEURL:
+      value: /api/v1/
+    REACT_APP_INACTIVITY_MAX_MINUTES:
+      value: '30'
+    REACT_APP_KEYCLOAK_CLIENTID:
+      value: stakit-ui
+    REACT_APP_KEYCLOAK_REALM:
+      value: stakit
+    REACT_APP_KEYCLOAK_URL:
+      value: 'https://keycloak.t0.hosting.kitkube.dk/auth'
     
