--- a/stakit/values.yaml
+++ b/stakit/values.yaml
@@ -20,7 +20,7 @@ backend:
   replicaCount: 2
 
   image:
-    repository: kvalitetsit/stakit-backend
+    repository: kvalitetsit/stakit-backend:0.2.0
     pullPolicy: IfNotPresent
     # -- Overrides the image tag whose default is the chart appVersion.
     tag: "0.2.0"
