--- a/stakit/templates/deployment-frontend.yaml
+++ b/stakit/templates/deployment-frontend.yaml
@@ -106,7 +106,7 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       initContainers:
-          image: "{{ .Values.frontend.image.repository }}:{{ .Values.frontend.image.tag | default .Chart.AppVersion }}"
+        - image: "{{ .Values.frontend.image.repository }}:{{ .Values.frontend.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.frontend.image.pullPolicy }}
           env: {{ if (not .Values.frontend.deployment.env) }}[]{{ end }}
             {{- range $key, $value := .Values.frontend.deployment.env }}
