--- a/stakit/templates/deployment-frontend.yaml
+++ b/stakit/templates/deployment-frontend.yaml
@@ -124,7 +124,7 @@ spec:
                   name: {{ $value.name }}
             {{- end }}
             {{- end }}       
-          name: {{ .Chart.Name }}-frontend
+          name: {{ .Chart.Name }}-init
           volumeMounts:
             - mountPath: /temp/etc/nginx
               name: etc
