Allow custom labels for frontend and backend podlabels

--- a/stakit/templates/deployment-backend.yaml
+++ b/stakit/templates/deployment-backend.yaml
@@ -20,6 +20,9 @@ spec:
       {{- end }}
       labels:
         {{- include "stakit.backend.selectorLabels" . | nindent 8 }}
+        {{- with .Values.frontend.podLabels }}
+          {{- toYaml . | nindent 8 }}
+        {{- end }}
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
