--- a/stakit/templates/deployment-frontend.yaml
+++ b/stakit/templates/deployment-frontend.yaml
@@ -21,6 +21,9 @@ spec:
       {{- end }}
       labels:
         {{- include "stakit.frontend.selectorLabels" . | nindent 8 }}
+        {{- with .Values.frontend.podLabels }}
+          {{- toYaml . | nindent 8 }}
+        {{- end }}
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
